aprendia los elementos de una pagina web

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>“Los lenguajes del navegador”</title>
+    </head>
+</html>
 <!-- Agrega tu código aqui -->
 
 
